adicionei um parágrafo

--- a/site-teste/index.html
+++ b/site-teste/index.html
@@ -12,5 +12,7 @@
     <hr>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum illo rem consequuntur vitae asperiores eius id sit sint. Expedita natus asperiores accusantium explicabo voluptate temporibus aut adipisci a voluptas qui.</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quidem sapiente sunt ipsa libero illum iusto placeat minima accusantium. Nobis dolor repellendus eos sapiente at. Quibusdam molestias temporibus beatae veritatis.</p>
 </body>
 </html>
